syntax = "proto3";

package LuckProto;
option csharp_namespace = "LuckQueries.Contract";

service GrpcQueryService {
    rpc GetLuck(LuckRequest) returns (LuckResponse);
}

message LuckRequest{
	string name = 1;
}

message LuckResponse {
	string procent = 1;
	string notification = 2;
}
